--- a/questions/general_knowledge.json
+++ b/questions/general_knowledge.json
@@ -1,6 +1,6 @@
 [
   {
-    "question": "What is the 29th state of India?",
-    "correct_answer": "Telangana"
+    "question": "Which country has the most islands?",
+    "correct_answer": "Sweden"
   }
 ]
