--- a/questions/general_knowledge.json
+++ b/questions/general_knowledge.json
@@ -1,6 +1,6 @@
 [
   {
-    "question": "Which country has the most islands?",
-    "correct_answer": "Sweden"
+    "question": "What is always associated with a dolmen?",
+    "correct_answer": "Stone"
   }
 ]
