fireworks full test finished

--- a/questions/general_knowledge.json
+++ b/questions/general_knowledge.json
@@ -1,6 +1,6 @@
 [
   {
-    "question": "What is always associated with a dolmen?",
-    "correct_answer": "Stone"
+    "question": "The process by which plants convert _________ and _________ into chemical energy is called _________.",
+    "correct_answer": "Sunlight, carbon dioxide, photosynthesis"
   }
 ]
