--- a/questions/general_knowledge.json
+++ b/questions/general_knowledge.json
@@ -1,6 +1,6 @@
 [
   {
-    "question": "Which country has the most islands?",
-    "correct_answer": "Sweden"
+    "question": "The process by which plants convert _________ and _________ into chemical energy is called _________.",
+    "correct_answer": "Sunlight, carbon dioxide, photosynthesis"
   }
 ]
